--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,28 +3,86 @@ name: example_CI
 on: [push, pull_request]
 
 jobs:
-  build:
+  build-test-deploy:
     runs-on: ubuntu-latest
 
+    services:
+      mysql:
+        image: mysql:8
+        env:
+          MYSQL_ROOT_PASSWORD: root
+          MYSQL_DATABASE: mydb
+          MYSQL_USER: user
+          MYSQL_PASSWORD: pass
+        ports:
+          - 3306:3306
+        volumes:
+          - ./db-init:/docker-entrypoint-initdb.d
+        options: >-
+          --health-cmd="mysqladmin ping -h localhost -uuser -ppass"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
+
+      mongo:
+        image: mongo:6
+        env:
+          MONGO_INITDB_ROOT_USERNAME: user
+          MONGO_INITDB_ROOT_PASSWORD: pass
+          MONGO_INITDB_DATABASE: store_manager
+        ports:
+          - 27017:27017
+        volumes:
+          - ./mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
+        options: >-
+          --health-cmd="mongosh --eval 'db.runCommand({ ping: 1 })'"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
+
     steps:
-      - name: Checkout dépot
+      - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Installer Python
+      - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.11'
+          python-version: "3.11"
 
-      - name: Creer fichier .env
-        run: |
-          echo "DB_HOST=localhost" >> .env
-          echo "DB_NAME=mydb" >> .env
-          echo "DB_USERNAME=user" >> .env
-          echo "DB_PASSWORD=pass" >> .env
-
-      - name: Installer les dépendances
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install pytest
 
+      - name: Wait for MySQL
+        run: |
+          until mysqladmin ping -h127.0.0.1 -P3306 -uuser -ppass --silent; do
+            echo "Waiting for MySQL..."
+            sleep 5
+          done
+
+      - name: Wait for MongoDB
+        run: |
+          until mongosh --host 127.0.0.1 --port 27017 -u user -p pass --eval "db.runCommand({ ping: 1 })"; do
+            echo "Waiting for MongoDB..."
+            sleep 5
+          done
+
+      - name: Run tests
+        working-directory: ./src
+        env:
+          MYSQL_HOST: mysql
+          MYSQL_PORT: 3306
+          MYSQL_DB_NAME: mydb
+          MONGODB_HOST: mongo
+          MONGODB_PORT: 27017
+          MONGODB_DB_NAME: store_manager
+          DB_USERNAME: user
+          DB_PASSWORD: pass
+        run: python -m pytest
+
+      - name: Build Docker image
+        run: docker build -t my-python-app .
+
+      - name: Run Docker container (deploy step)
+        run: docker run -d --name my-python-app -p 8000:8000 my-python-app
