--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,7 +69,7 @@ jobs:
           MYSQL_HOST: 127.0.0.1
           MYSQL_PORT: 3306
           MYSQL_DB_NAME: mydb
-          MONGODB_HOST: 127.0.0.1
+          MONGODB_HOST: mongo
           MONGODB_PORT: 27017
           MONGODB_DB_NAME: store_manager
           DB_USERNAME: user
