--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,7 +58,8 @@ jobs:
 
       - name: Wait for MongoDB
         run: |
-          until nc -z 127.0.0.1 27017; do
+          for i in {1..30}; do
+            mongo --host 127.0.0.1 -u user -p pass --authenticationDatabase admin --eval "db.runCommand({ ping: 1 })" && break
             echo "Waiting for MongoDB..."
             sleep 2
           done
