--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,12 +57,12 @@ jobs:
           done
 
       - name: Wait for MongoDB
-        run: |
-          for i in {1..30}; do
-            mongo --host 127.0.0.1 -u user -p pass --authenticationDatabase admin --eval "db.runCommand({ ping: 1 })" && break
-            echo "Waiting for MongoDB..."
-            sleep 2
-          done
+          run: |
+            for i in {1..30}; do
+              docker exec mongo mongo -u user -p pass --authenticationDatabase admin --eval "db.runCommand({ ping: 1 })" && break
+              echo "Waiting for MongoDB..."
+              sleep 2
+            done
 
       - name: Run init.sql
         run: mysql -h 127.0.0.1 -P 3306 -uuser -ppass mydb < ./db-init/init.sql
