--- a/.github/workflows/mongo-test.yml
+++ b/.github/workflows/mongo-test.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Wait for MongoDB
         run: |
           for i in {1..10}; do
-            mongosh "mongodb://user:pass@mongo:27017/admin" --eval "db.adminCommand('ping')" && break
+            mongosh "mongodb://user:pass@127.0.0.1:27017/admin" --eval "db.adminCommand('ping')" && break
             echo "Waiting for MongoDB..."
             sleep 5
           done
