--- a/.github/workflows/mongo-test.yml
+++ b/.github/workflows/mongo-test.yml
@@ -15,6 +15,8 @@ jobs:
           MONGO_INITDB_DATABASE: store_manager
         ports:
           - 27017:27017
+        volumes:
+          - ./db-init:/docker-entrypoint-initdb.d
 
     steps:
       - name: Checkout code
