--- a/.github/workflows/mongo-test.yml
+++ b/.github/workflows/mongo-test.yml
@@ -10,6 +10,8 @@ jobs:
       mongo:
         image: mongo:6
         env:
+          MONGO_INITDB_ROOT_USERNAME: user
+          MONGO_INITDB_ROOT_PASSWORD: pass
           MONGO_INITDB_DATABASE: store_manager
         ports:
           - 27017:27017
