--- a/.github/workflows/mongo-test.yml
+++ b/.github/workflows/mongo-test.yml
@@ -16,7 +16,7 @@ jobs:
         ports:
           - 27017:27017
         volumes:
-          - ./db-init:/docker-entrypoint-initdb.d
+          - ./mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
 
     steps:
       - name: Checkout code
